# file_send

./: Cargo.toml
app/: Cargo.toml  index.html
app/src/: lib.rs  main.rs
app/src/components/: mod.rs
app/src/components/form/: custom_button.rs  custom_form.rs  files_input.rs  mod.rs
app/src/components/title/: mod.rs  title_main.rs  title_nav.rs
web/src/: main.rs
websocket/: Cargo.toml
websocket/src/: main.rs  server.rs
